--- a/Project.html
+++ b/Project.html
@@ -42,7 +42,7 @@
             <ul class="u-custom-font u-nav u-spacing-30 u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-border-2 u-border-active-custom-color-8 u-border-hover-custom-color-8 u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-grey-90 u-text-grey-90 u-text-hover-grey-90" href="Home.html" style="padding: 10px 0px;">Home</a>
 </li><li class="u-nav-item"><a class="u-border-2 u-border-active-custom-color-8 u-border-hover-custom-color-8 u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-grey-90 u-text-grey-90 u-text-hover-grey-90" href="Home.html#carousel_88fc" style="padding: 10px 0px;">About</a>
 </li><li class="u-nav-item"><a class="u-border-2 u-border-active-custom-color-8 u-border-hover-custom-color-8 u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-grey-90 u-text-grey-90 u-text-hover-grey-90" href="Project.html" style="padding: 10px 0px;">Project</a>
-</li><li class="u-nav-item"><a class="u-border-2 u-border-active-custom-color-8 u-border-hover-custom-color-8 u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-grey-90 u-text-grey-90 u-text-hover-grey-90" href="Home.html#carousel_69a7" style="padding: 10px 0px;">Contact Us</a>
+</li><li class="u-nav-item"><a class="u-border-2 u-border-active-custom-color-8 u-border-hover-custom-color-8 u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-grey-90 u-text-grey-90 u-text-hover-grey-90" href="Home.html#carousel_ad0e" style="padding: 10px 0px;">Contact Us</a>
 </li></ul>
           </div>
           <div class="u-custom-menu u-nav-container-collapse">
@@ -52,7 +52,7 @@
                 <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Home.html">Home</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Home.html#carousel_88fc">About</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Project.html">Project</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Home.html#carousel_69a7">Contact Us</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Home.html#carousel_ad0e">Contact Us</a>
 </li></ul>
               </div>
             </div>
@@ -123,7 +123,7 @@
             <div class="u-container-style u-list-item u-repeater-item">
               <div class="u-container-layout u-similar-container u-container-layout-9">
                 <img alt="" class="u-border-1 u-border-grey-75 u-expanded-width u-image u-image-default u-image-9" data-image-width="3690" data-image-height="4612" src="images/FHS_9968.jpg">
-                <h2 class="u-align-center u-custom-font u-font-playfair-display u-text u-text-17">Hidden Whispers</h2>
+                <h2 class="u-align-center u-custom-font u-font-playfair-display u-text u-text-17">African Lady's Hair</h2>
                 <p class="u-align-center u-text u-text-18"> 36 x 48 inches</p>
               </div>
             </div>
@@ -137,8 +137,7 @@
             <div class="u-container-style u-list-item u-repeater-item">
               <div class="u-container-layout u-similar-container u-container-layout-11">
                 <img alt="" class="u-border-1 u-border-grey-75 u-expanded-width u-image u-image-default u-image-11" data-image-width="3593" data-image-height="4490" src="images/FHS_9897.jpg">
-                <h2 class="u-align-center u-custom-font u-font-playfair-display u-text u-text-21"> Radiant&nbsp;<br>Spirit
-                </h2>
+                <h2 class="u-align-center u-custom-font u-font-playfair-display u-text u-text-21">Strength of a Woman</h2>
                 <p class="u-align-center u-text u-text-22"> 36 x 48 inches</p>
               </div>
             </div>
@@ -167,7 +166,7 @@
             <div class="u-container-style u-list-item u-repeater-item">
               <div class="u-container-layout u-similar-container u-container-layout-15">
                 <img alt="" class="u-border-1 u-border-grey-75 u-expanded-width u-image u-image-default u-image-15" data-image-width="3840" data-image-height="4800" src="images/FHS_9882.jpg">
-                <h2 class="u-align-center u-custom-font u-font-playfair-display u-text u-text-29"> Crowing Glory</h2>
+                <h2 class="u-align-center u-custom-font u-font-playfair-display u-text u-text-29">Nature's Bell</h2>
                 <p class="u-align-center u-text u-text-30"> 36 x 48 inches</p>
               </div>
             </div>
@@ -188,7 +187,7 @@
             <div class="u-container-style u-list-item u-repeater-item">
               <div class="u-container-layout u-similar-container u-container-layout-18">
                 <img alt="" class="u-border-1 u-border-grey-75 u-expanded-width u-image u-image-default u-image-18" data-image-width="4305" data-image-height="3444" src="images/FHS_0002.jpg">
-                <h2 class="u-align-center u-custom-font u-font-playfair-display u-text u-text-35"> Sisters in Elegance</h2>
+                <h2 class="u-align-center u-custom-font u-font-playfair-display u-text u-text-35">The Wise Women</h2>
                 <p class="u-align-center u-text u-text-36"> 36 x 48 inches</p>
               </div>
             </div>
@@ -223,14 +222,14 @@
             <div class="u-container-style u-list-item u-repeater-item">
               <div class="u-container-layout u-similar-container u-container-layout-23">
                 <img alt="" class="u-border-1 u-border-grey-75 u-expanded-width u-image u-image-default u-image-23" data-image-width="720" data-image-height="726" src="images/WhatsAppImage2024-07-09at4.28.06PM11.jpeg">
-                <h2 class="u-align-center u-custom-font u-font-playfair-display u-text u-text-45"> Chromatic Dreams</h2>
+                <h2 class="u-align-center u-custom-font u-font-playfair-display u-text u-text-45">The Beauty Of Nature</h2>
                 <p class="u-align-center u-text u-text-46"> 36 x 48 inches</p>
               </div>
             </div>
             <div class="u-container-style u-list-item u-repeater-item">
               <div class="u-container-layout u-similar-container u-container-layout-24">
                 <img alt="" class="u-border-1 u-border-grey-75 u-expanded-width u-image u-image-default u-image-24" data-image-width="3735" data-image-height="4669" src="images/FHS_9886.jpg">
-                <h2 class="u-align-center u-custom-font u-font-playfair-display u-text u-text-47"> Shadows of Africa</h2>
+                <h2 class="u-align-center u-custom-font u-font-playfair-display u-text u-text-47">African Queen</h2>
                 <p class="u-align-center u-text u-text-48"> 36 x 48 inches</p>
               </div>
             </div>
@@ -293,10 +292,79 @@
             </div>
             <div class="u-container-style u-list-item u-repeater-item">
               <div class="u-container-layout u-similar-container u-container-layout-8">
-                <img alt="" class="u-border-6 u-border-grey-75 u-expanded-width u-image u-image-default u-image-8" data-image-width="4083" data-image-height="3266" src="images/Ebonywood.jpg">
-                <h2 class="u-align-center u-custom-font u-font-playfair-display u-text u-text-15"> Night's&nbsp;<br>Guardian
-                </h2>
+                <img alt="" class="u-border-6 u-border-grey-75 u-expanded-width u-image u-image-default u-image-8" data-image-width="4800" data-image-height="3840" src="images/Intothesunset.jpg">
+                <h2 class="u-align-center u-custom-font u-font-playfair-display u-text u-text-15">Into The Sunset</h2>
                 <p class="u-align-center u-text u-text-16"> 36 x 48 inches</p>
+              </div>
+            </div>
+            <div class="u-container-style u-list-item u-repeater-item">
+              <div class="u-container-layout u-similar-container u-container-layout-9">
+                <img alt="" class="u-border-6 u-border-grey-75 u-expanded-width u-image u-image-default u-image-9" data-image-width="3840" data-image-height="4800" src="images/MusicandLove.jpg">
+                <h2 class="u-align-center u-custom-font u-font-playfair-display u-text u-text-17">Music and Love</h2>
+                <p class="u-align-center u-text u-text-18"> 36 x 48 inches</p>
+              </div>
+            </div>
+            <div class="u-container-style u-list-item u-repeater-item">
+              <div class="u-container-layout u-similar-container u-container-layout-10">
+                <img alt="" class="u-border-6 u-border-grey-75 u-expanded-width u-image u-image-default u-image-10" data-image-width="4800" data-image-height="3840" src="images/Intothesunset.jpg">
+                <h2 class="u-align-center u-custom-font u-font-playfair-display u-text u-text-19">Into The Sunset</h2>
+                <p class="u-align-center u-text u-text-20"> 36 x 48 inches</p>
+              </div>
+            </div>
+            <div class="u-container-style u-list-item u-repeater-item">
+              <div class="u-container-layout u-similar-container u-container-layout-11">
+                <img alt="" class="u-border-6 u-border-grey-75 u-expanded-width u-image u-image-default u-image-11" data-image-width="4800" data-image-height="3840" src="images/Intothesunset.jpg">
+                <h2 class="u-align-center u-custom-font u-font-playfair-display u-text u-text-21">Into The Sunset</h2>
+                <p class="u-align-center u-text u-text-22"> 36 x 48 inches</p>
+              </div>
+            </div>
+            <div class="u-container-style u-list-item u-repeater-item">
+              <div class="u-container-layout u-similar-container u-container-layout-12">
+                <img alt="" class="u-border-6 u-border-grey-75 u-expanded-width u-image u-image-default u-image-12" data-image-width="4800" data-image-height="3840" src="images/Intothesunset.jpg">
+                <h2 class="u-align-center u-custom-font u-font-playfair-display u-text u-text-23">Into The Sunset</h2>
+                <p class="u-align-center u-text u-text-24"> 36 x 48 inches</p>
+              </div>
+            </div>
+            <div class="u-container-style u-list-item u-repeater-item">
+              <div class="u-container-layout u-similar-container u-container-layout-13">
+                <img alt="" class="u-border-6 u-border-grey-75 u-expanded-width u-image u-image-default u-image-13" data-image-width="4800" data-image-height="3840" src="images/Intothesunset.jpg">
+                <h2 class="u-align-center u-custom-font u-font-playfair-display u-text u-text-25">Into The Sunset</h2>
+                <p class="u-align-center u-text u-text-26"> 36 x 48 inches</p>
+              </div>
+            </div>
+            <div class="u-container-style u-list-item u-repeater-item">
+              <div class="u-container-layout u-similar-container u-container-layout-14">
+                <img alt="" class="u-border-6 u-border-grey-75 u-expanded-width u-image u-image-default u-image-14" data-image-width="4800" data-image-height="3840" src="images/Intothesunset.jpg">
+                <h2 class="u-align-center u-custom-font u-font-playfair-display u-text u-text-27">Into The Sunset</h2>
+                <p class="u-align-center u-text u-text-28"> 36 x 48 inches</p>
+              </div>
+            </div>
+            <div class="u-container-style u-list-item u-repeater-item">
+              <div class="u-container-layout u-similar-container u-container-layout-15">
+                <img alt="" class="u-border-6 u-border-grey-75 u-expanded-width u-image u-image-default u-image-15" data-image-width="4800" data-image-height="3840" src="images/Intothesunset.jpg">
+                <h2 class="u-align-center u-custom-font u-font-playfair-display u-text u-text-29">Into The Sunset</h2>
+                <p class="u-align-center u-text u-text-30"> 36 x 48 inches</p>
+              </div>
+            </div>
+            <div class="u-container-style u-list-item u-repeater-item">
+              <div class="u-container-layout u-similar-container u-container-layout-16">
+                <img alt="" class="u-border-6 u-border-grey-75 u-expanded-width u-image u-image-default u-image-16" data-image-width="4800" data-image-height="3840" src="images/Intothesunset.jpg">
+                <h2 class="u-align-center u-custom-font u-font-playfair-display u-text u-text-31">Into The Sunset</h2>
+                <p class="u-align-center u-text u-text-32"> 36 x 48 inches</p>
+              </div>
+            </div>
+            <div class="u-container-style u-list-item u-repeater-item">
+              <div class="u-container-layout u-similar-container u-container-layout-17">
+                <img alt="" class="u-border-6 u-border-grey-75 u-expanded-width u-image u-image-default u-image-17" data-image-width="4800" data-image-height="3840" src="images/Intothesunset.jpg">
+                <h2 class="u-align-center u-custom-font u-font-playfair-display u-text u-text-33">Into The Sunset</h2>
+                <p class="u-align-center u-text u-text-34"> 36 x 48 inches</p>
+              </div>
+            </div>
+            <div class="u-container-style u-list-item u-repeater-item">
+              <div class="u-container-layout u-similar-container u-container-layout-18">
+                <img alt="" class="u-border-6 u-border-grey-75 u-expanded-width u-image u-image-default u-image-18" data-image-width="4800" data-image-height="3840" src="images/Intothesunset.jpg">
+                <h2 class="u-align-center u-custom-font u-font-playfair-display u-text u-text-35">Into The Sunset</h2>
+                <p class="u-align-center u-text u-text-36"> 36 x 48 inches</p>
               </div>
             </div>
           </div>
@@ -309,7 +377,13 @@
     <footer class="u-align-center u-black u-clearfix u-footer u-footer" id="sec-704f"><div class="u-clearfix u-sheet u-sheet-1">
         <p class="u-small-text u-text u-text-variant u-text-1">@2024 FerryCee Portfolio</p>
       </div></footer>
-    
+    <section class="u-backlink u-clearfix u-grey-80">
+      <p class="u-text">
+        <span>This site was created with the </span>
+        <a class="u-link" href="https://nicepage.com/" target="_blank" rel="nofollow">
+          <span>Nicepage</span>
+        </a>
+      </p>
     </section>
   
 </body></html>
