--- a/index.html
+++ b/index.html
@@ -65,36 +65,14 @@
           </div>
         </nav>
       </div></header>
-    <section class="u-carousel u-slide u-block-7892-1" id="carousel-af55" data-interval="5000" data-u-ride="carousel">
-      <ol class="u-absolute-hcenter u-carousel-indicators u-block-7892-2">
-        <li data-u-target="#carousel-af55" class="u-active u-grey-30" data-u-slide-to="0"></li>
-      </ol>
-      <div class="u-carousel-inner" role="listbox">
-        <div class="u-active u-carousel-item u-clearfix u-image u-shading u-section-1-1" data-image-width="4980" data-image-height="3984">
-          <div class="u-clearfix u-sheet u-sheet-1">
-            <div class="u-container-style u-group u-shape-rectangle u-group-1">
-              <div class="u-container-layout u-container-layout-1">
-                <h4 class="u-custom-font u-font-playfair-display u-text u-text-default u-text-1"> Cynthia Ngozi Adinmah</h4>
-                <h5 class="u-align-left u-text u-text-body-alt-color u-text-2"> Bead A​rtist</h5>
-              </div>
-            </div>
-          </div>
+    <section class="skrollable u-clearfix u-container-align-center u-uploaded-video u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xl u-section-1" id="carousel_a136">
+      <img class="u-expanded-width u-image u-image-1" src="images/FHS_9843.jpg" data-image-width="4980" data-image-height="3984">
+      <div class="u-align-center u-container-style u-group u-white u-group-1">
+        <div class="u-container-layout u-container-layout-1">
+          <h2 class="u-align-center u-custom-font u-font-playfair-display u-text u-text-1"> Cynthia Ngozi Adinmah</h2>
+          <p class="u-align-center u-custom-font u-font-playfair-display u-large-text u-text u-text-variant u-text-2"> Bead Mosaic A​rtist </p>
         </div>
       </div>
-      <a class="u-absolute-vcenter u-carousel-control u-carousel-control-prev u-hidden u-text-grey-30 u-block-7892-3" href="#carousel-af55" role="button" data-u-slide="prev">
-        <span aria-hidden="true">
-          <svg class="u-svg-link" viewBox="0 0 477.175 477.175"><path d="M145.188,238.575l215.5-215.5c5.3-5.3,5.3-13.8,0-19.1s-13.8-5.3-19.1,0l-225.1,225.1c-5.3,5.3-5.3,13.8,0,19.1l225.1,225
-                    c2.6,2.6,6.1,4,9.5,4s6.9-1.3,9.5-4c5.3-5.3,5.3-13.8,0-19.1L145.188,238.575z"></path></svg>
-        </span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="u-absolute-vcenter u-carousel-control u-carousel-control-next u-hidden u-text-grey-30 u-block-7892-4" href="#carousel-af55" role="button" data-u-slide="next">
-        <span aria-hidden="true">
-          <svg class="u-svg-link" viewBox="0 0 477.175 477.175"><path d="M360.731,229.075l-225.1-225.1c-5.3-5.3-13.8-5.3-19.1,0s-5.3,13.8,0,19.1l215.5,215.5l-215.5,215.5
-                    c-5.3,5.3-5.3,13.8,0,19.1c2.6,2.6,6.1,4,9.5,4c3.4,0,6.9-1.3,9.5-4l225.1-225.1C365.931,242.875,365.931,234.275,360.731,229.075z"></path></svg>
-        </span>
-        <span class="sr-only">Next</span>
-      </a>
     </section>
     <section class="u-clearfix u-section-2" id="sec-cee7">
       <div class="u-clearfix u-sheet u-sheet-1"></div>
@@ -266,13 +244,7 @@
     <footer class="u-align-center u-black u-clearfix u-footer u-footer" id="sec-704f"><div class="u-clearfix u-sheet u-sheet-1">
         <p class="u-small-text u-text u-text-variant u-text-1">@2024 FerryCee Portfolio</p>
       </div></footer>
-    <section class="u-backlink u-clearfix u-grey-80">
-      <p class="u-text">
-        <span>This site was created with the </span>
-        <a class="u-link" href="https://nicepage.com/" target="_blank" rel="nofollow">
-          <span>Nicepage</span>
-        </a>
-      </p>
+    
     </section>
   
 </body></html>
