--- a/Home.html
+++ b/Home.html
@@ -226,7 +226,7 @@
 </g></svg></span>
               <h5 class="u-text u-text-5">Email</h5>
               <p class="u-text u-text-6">
-                <a href="mailto:hello@theme.com" class="u-active-none u-border-1 u-border-custom-color-7 u-border-no-left u-border-no-right u-border-no-top u-btn u-button-link u-button-style u-hover-none u-none u-text-custom-color-7 u-btn-1">Ngbrown2go@gmail.com</a>
+                <a href="mailto:hello@theme.com" class="u-active-none u-border-1 u-border-custom-color-7 u-border-no-left u-border-no-right u-border-no-top u-btn u-button-link u-button-style u-hover-none u-none u-text-custom-color-7 u-btn-1">Ferryceeartstudios@gmail.com</a>
               </p>
             </div>
           </div>
