--- a/Home.html
+++ b/Home.html
@@ -144,7 +144,7 @@
             <div class="u-align-center u-black u-container-style u-list-item u-repeater-item u-shape-round u-list-item-1" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="500">
               <div class="u-container-layout u-similar-container u-container-layout-1">
                 <img class="u-expanded-width u-image u-image-1" src="images/NarrowPath15x22inches.jpg" data-image-width="3840" data-image-height="4800">
-                <h2 class="u-align-center u-hover-feature u-text u-text-body-alt-color u-text-default u-text-3"> Narrow Path&nbsp;<br>into Infinity
+                <h2 class="u-align-center u-hover-feature u-text u-text-body-alt-color u-text-default u-text-3"> Narrow &nbsp;<br>Path
                 </h2>
               </div>
             </div>
