--- a/Home.html
+++ b/Home.html
@@ -151,13 +151,13 @@
             <div class="u-align-center u-black u-container-style u-list-item u-repeater-item u-shape-round u-list-item-2" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="500">
               <div class="u-container-layout u-similar-container u-container-layout-2">
                 <img class="u-expanded-width u-image u-image-2" src="images/TheBeginningofLife36x48inches.jpg" data-image-width="5105" data-image-height="4084">
-                <h2 class="u-align-center u-hover-feature u-text u-text-body-alt-color u-text-default u-text-4"> Spring's Promise</h2>
+                <h2 class="u-align-center u-hover-feature u-text u-text-body-alt-color u-text-default u-text-4"> The beginning of Life</h2>
               </div>
             </div>
             <div class="u-align-center u-black u-container-style u-list-item u-repeater-item u-shape-round u-list-item-3" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="500">
               <div class="u-container-layout u-similar-container u-container-layout-3">
                 <img class="u-expanded-width u-image u-image-3" src="images/Fulanilady30x40inches1.jpg" data-image-width="4238" data-image-height="5296">
-                <h2 class="u-align-center u-hover-feature u-text u-text-body-alt-color u-text-default u-text-5"> Bowl of Reflection</h2>
+                <h2 class="u-align-center u-hover-feature u-text u-text-body-alt-color u-text-default u-text-5"> Fulani Woman</h2>
               </div>
             </div>
           </div>
